Add performance metrics